ocio-sys/src/bridge.hpp

// --- Look ---
void* ocio_look_create(void);
void ocio_look_destroy(void* handle);
void* ocio_look_get_name(void* handle);
void ocio_look_set_name(void* handle, const char* name);
void* ocio_look_get_process_space(void* handle);
void ocio_look_set_process_space(void* handle, const char* processSpace);
void* ocio_look_get_transform(void* handle);
void ocio_look_set_transform(void* handle, void* transform);
void* ocio_look_get_inverse_transform(void* handle);
void ocio_look_set_inverse_transform(void* handle, void* transform);
void* ocio_look_get_description(void* handle);
void ocio_look_set_description(void* handle, const char* description);
void ocio_look_set_interchange_attribute(void* handle, const char* attrName, const char* value);
const char* ocio_look_get_interchange_attribute(void* handle, const char* attrName);
int ocio_look_get_num_interchange_attributes(void* handle);
const char* ocio_look_get_interchange_attribute_name_by_index(void* handle, int index);
const char* ocio_look_get_interchange_attribute_value_by_index(void* handle, int index);
// --- NamedTransform ---
void* ocio_named_transform_create(void);
void ocio_named_transform_destroy(void* handle);
void* ocio_named_transform_get_name(void* handle);
void ocio_named_transform_set_name(void* handle, const char* name);
size_t ocio_named_transform_get_num_aliases(void* handle);
void* ocio_named_transform_get_alias(void* handle, size_t idx);
bool ocio_named_transform_has_alias(void* handle, const char* alias);
void ocio_named_transform_add_alias(void* handle, const char* alias);
void ocio_named_transform_remove_alias(void* handle, const char* alias);
void ocio_named_transform_clear_aliases(void* handle);
void* ocio_named_transform_get_family(void* handle);
void ocio_named_transform_set_family(void* handle, const char* family);
void* ocio_named_transform_get_description(void* handle);
void ocio_named_transform_set_description(void* handle, const char* description);
bool ocio_named_transform_has_category(void* handle, const char* category);
void ocio_named_transform_add_category(void* handle, const char* category);
void ocio_named_transform_remove_category(void* handle, const char* category);
int ocio_named_transform_get_num_categories(void* handle);
void* ocio_named_transform_get_category(void* handle, int index);
void ocio_named_transform_clear_categories(void* handle);
void* ocio_named_transform_get_encoding(void* handle);
void ocio_named_transform_set_encoding(void* handle, const char* encoding);
void* ocio_named_transform_get_transform(void* handle, int dir);
void ocio_named_transform_set_transform(void* handle, void* transform, int dir);
// --- ViewTransform ---
void* ocio_view_transform_create(void);
void* ocio_view_transform_create_with_reference_space(int referenceSpace);
void ocio_view_transform_destroy(void* handle);
void* ocio_view_transform_create_editable_copy(void* handle);
void* ocio_view_transform_get_name(void* handle);
void ocio_view_transform_set_name(void* handle, const char* name);
void* ocio_view_transform_get_family(void* handle);
void ocio_view_transform_set_family(void* handle, const char* family);
void* ocio_view_transform_get_description(void* handle);
void ocio_view_transform_set_description(void* handle, const char* description);
void ocio_view_transform_set_interchange_attribute(void* handle, const char* attrName, const char* value);
const char* ocio_view_transform_get_interchange_attribute(void* handle, const char* attrName);
int ocio_view_transform_get_num_interchange_attributes(void* handle);
const char* ocio_view_transform_get_interchange_attribute_name_by_index(void* handle, int index);
const char* ocio_view_transform_get_interchange_attribute_value_by_index(void* handle, int index);
bool ocio_view_transform_has_category(void* handle, const char* category);
void ocio_view_transform_add_category(void* handle, const char* category);
void ocio_view_transform_remove_category(void* handle, const char* category);
int ocio_view_transform_get_num_categories(void* handle);
void* ocio_view_transform_get_category(void* handle, int index);
void ocio_view_transform_clear_categories(void* handle);
int ocio_view_transform_get_reference_space_type(void* handle);
void* ocio_view_transform_get_transform(void* handle, int dir);
void ocio_view_transform_set_transform(void* handle, void* transform, int dir);
// --- Transform ---
void* ocio_transform_create_editable_copy(void* handle);
int ocio_transform_get_transform_type(void* handle);
// --- Processor ---
void ocio_processor_destroy(void* handle);
bool ocio_processor_is_no_op(void* handle);
bool ocio_processor_has_channel_crosstalk(void* handle);
void* ocio_processor_get_cache_id(void* handle);
void* ocio_processor_get_processor_metadata(void* handle);
void* ocio_processor_get_format_metadata(void* handle);
int ocio_processor_get_num_transforms(void* handle);
void* ocio_processor_get_transform_format_metadata(void* handle, int index);
void* ocio_processor_create_group_transform(void* handle);
void* ocio_processor_get_dynamic_property(void* handle, int type);
bool ocio_processor_has_dynamic_property(void* handle, int type);
bool ocio_processor_is_dynamic(void* handle);
void* ocio_processor_get_optimized_processor_v1(void* handle, int oFlags);
void* ocio_processor_get_optimized_processor_v2(void* handle, int inBD, int outBD, int oFlags);
void* ocio_processor_optimized_processor(void* handle, int oFlags);
void* ocio_processor_get_default_gpu_processor(void* handle);
void* ocio_processor_get_optimized_gpu_processor(void* handle, int oFlags);
void* ocio_processor_get_optimized_legacy_gpu_processor(void* handle, int oFlags, unsigned edgelen);
void* ocio_processor_get_default_cpu_processor(void* handle);
void* ocio_processor_get_optimized_cpu_processor(void* handle, int oFlags);
// --- ProcessorMetadata ---
void* ocio_processor_metadata_create(void);
void ocio_processor_metadata_destroy(void* handle);
int ocio_processor_metadata_get_num_files(void* handle);
void* ocio_processor_metadata_get_file(void* handle, int index);
int ocio_processor_metadata_get_num_looks(void* handle);
void* ocio_processor_metadata_get_look(void* handle, int index);
void ocio_processor_metadata_add_file(void* handle, const char* fileName);
void ocio_processor_metadata_add_look(void* handle, const char* look);
// --- CPUProcessor ---
void ocio_cpu_processor_destroy(void* handle);
bool ocio_cpu_processor_is_no_op(void* handle);
bool ocio_cpu_processor_is_identity(void* handle);
bool ocio_cpu_processor_has_channel_crosstalk(void* handle);
void* ocio_cpu_processor_get_cache_id(void* handle);
int ocio_cpu_processor_get_input_bit_depth(void* handle);
int ocio_cpu_processor_get_output_bit_depth(void* handle);
void* ocio_cpu_processor_get_dynamic_property(void* handle, int type);
bool ocio_cpu_processor_has_dynamic_property(void* handle, int type);
bool ocio_cpu_processor_is_dynamic(void* handle);
void ocio_cpu_processor_apply(void* handle, void* imgDesc);
void ocio_cpu_processor_apply_v1(void* handle, void* imgDesc);
void ocio_cpu_processor_apply_v2(void* handle, void* srcImgDesc, void* dstImgDesc);
void ocio_cpu_processor_apply_rgb(void* handle, void* pixel);
void ocio_cpu_processor_apply_rgba(void* handle, void* pixel);
// --- GPUProcessor ---
void ocio_gpu_processor_destroy(void* handle);
bool ocio_gpu_processor_is_no_op(void* handle);
bool ocio_gpu_processor_has_channel_crosstalk(void* handle);
void* ocio_gpu_processor_get_cache_id(void* handle);
void ocio_gpu_processor_extract_gpu_shader_info(void* handle, void* shaderDesc);
void ocio_gpu_processor_extract_gpu_shader_info_v1(void* handle, void* shaderDesc);
void ocio_gpu_processor_extract_gpu_shader_info_v2(void* handle, void* shaderCreator);