ocio-sys/src/lib.rs


    // --- Look ---
    pub fn ocio_look_create() -> *mut c_void;
    pub fn ocio_look_destroy(handle: *mut c_void);
    pub fn ocio_look_get_name(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_look_set_name(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_look_get_process_space(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_look_set_process_space(handle: *mut c_void, processSpace: *const i8) -> ();
    pub fn ocio_look_get_transform(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_look_set_transform(handle: *mut c_void, transform: *mut c_void) -> ();
    pub fn ocio_look_get_inverse_transform(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_look_set_inverse_transform(handle: *mut c_void, transform: *mut c_void) -> ();
    pub fn ocio_look_get_description(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_look_set_description(handle: *mut c_void, description: *const i8) -> ();
    pub fn ocio_look_set_interchange_attribute(
        handle: *mut c_void,
        attrName: *const i8,
        value: *const i8,
    ) -> ();
    pub fn ocio_look_get_interchange_attribute(
        handle: *mut c_void,
        attrName: *const i8,
    ) -> *const i8;
    pub fn ocio_look_get_num_interchange_attributes(handle: *mut c_void) -> i32;
    pub fn ocio_look_get_interchange_attribute_name_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *const i8;
    pub fn ocio_look_get_interchange_attribute_value_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *const i8;

    // --- NamedTransform ---
    pub fn ocio_named_transform_create() -> *mut c_void;
    pub fn ocio_named_transform_destroy(handle: *mut c_void);
    pub fn ocio_named_transform_get_name(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_named_transform_set_name(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_named_transform_get_num_aliases(handle: *mut c_void) -> usize;
    pub fn ocio_named_transform_get_alias(handle: *mut c_void, idx: usize) -> *mut c_void;
    pub fn ocio_named_transform_has_alias(handle: *mut c_void, alias: *const i8) -> bool;
    pub fn ocio_named_transform_add_alias(handle: *mut c_void, alias: *const i8) -> ();
    pub fn ocio_named_transform_remove_alias(handle: *mut c_void, alias: *const i8) -> ();
    pub fn ocio_named_transform_clear_aliases(handle: *mut c_void) -> ();
    pub fn ocio_named_transform_get_family(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_named_transform_set_family(handle: *mut c_void, family: *const i8) -> ();
    pub fn ocio_named_transform_get_description(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_named_transform_set_description(handle: *mut c_void, description: *const i8) -> ();
    pub fn ocio_named_transform_has_category(handle: *mut c_void, category: *const i8) -> bool;
    pub fn ocio_named_transform_add_category(handle: *mut c_void, category: *const i8) -> ();
    pub fn ocio_named_transform_remove_category(handle: *mut c_void, category: *const i8) -> ();
    pub fn ocio_named_transform_get_num_categories(handle: *mut c_void) -> i32;
    pub fn ocio_named_transform_get_category(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_named_transform_clear_categories(handle: *mut c_void) -> ();
    pub fn ocio_named_transform_get_encoding(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_named_transform_set_encoding(handle: *mut c_void, encoding: *const i8) -> ();
    pub fn ocio_named_transform_get_transform(handle: *mut c_void, dir: i32) -> *mut c_void;
    pub fn ocio_named_transform_set_transform(
        handle: *mut c_void,
        transform: *mut c_void,
        dir: i32,
    ) -> ();

    // --- ViewTransform ---
    pub fn ocio_view_transform_create() -> *mut c_void;
    pub fn ocio_view_transform_create_with_reference_space(referenceSpace: i32) -> *mut c_void;
    pub fn ocio_view_transform_destroy(handle: *mut c_void);
    pub fn ocio_view_transform_create_editable_copy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_view_transform_get_name(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_view_transform_set_name(handle: *mut c_void, name: *const i8) -> ();
    pub fn ocio_view_transform_get_family(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_view_transform_set_family(handle: *mut c_void, family: *const i8) -> ();
    pub fn ocio_view_transform_get_description(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_view_transform_set_description(handle: *mut c_void, description: *const i8) -> ();
    pub fn ocio_view_transform_set_interchange_attribute(
        handle: *mut c_void,
        attrName: *const i8,
        value: *const i8,
    ) -> ();
    pub fn ocio_view_transform_get_interchange_attribute(
        handle: *mut c_void,
        attrName: *const i8,
    ) -> *const i8;
    pub fn ocio_view_transform_get_num_interchange_attributes(handle: *mut c_void) -> i32;
    pub fn ocio_view_transform_get_interchange_attribute_name_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *const i8;
    pub fn ocio_view_transform_get_interchange_attribute_value_by_index(
        handle: *mut c_void,
        index: i32,
    ) -> *const i8;
    pub fn ocio_view_transform_has_category(handle: *mut c_void, category: *const i8) -> bool;
    pub fn ocio_view_transform_add_category(handle: *mut c_void, category: *const i8) -> ();
    pub fn ocio_view_transform_remove_category(handle: *mut c_void, category: *const i8) -> ();
    pub fn ocio_view_transform_get_num_categories(handle: *mut c_void) -> i32;
    pub fn ocio_view_transform_get_category(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_view_transform_clear_categories(handle: *mut c_void) -> ();
    pub fn ocio_view_transform_get_reference_space_type(handle: *mut c_void) -> i32;
    pub fn ocio_view_transform_get_transform(handle: *mut c_void, dir: i32) -> *mut c_void;
    pub fn ocio_view_transform_set_transform(
        handle: *mut c_void,
        transform: *mut c_void,
        dir: i32,
    ) -> ();

    // --- Transform ---
    pub fn ocio_transform_create_editable_copy(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_transform_get_transform_type(handle: *mut c_void) -> i32;

    // --- Processor ---
    pub fn ocio_processor_destroy(handle: *mut c_void);
    pub fn ocio_processor_is_no_op(handle: *mut c_void) -> bool;
    pub fn ocio_processor_has_channel_crosstalk(handle: *mut c_void) -> bool;
    pub fn ocio_processor_get_cache_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_processor_get_processor_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_processor_get_format_metadata(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_processor_get_num_transforms(handle: *mut c_void) -> i32;
    pub fn ocio_processor_get_transform_format_metadata(
        handle: *mut c_void,
        index: i32,
    ) -> *mut c_void;
    pub fn ocio_processor_create_group_transform(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_processor_get_dynamic_property(handle: *mut c_void, type_param: i32)
        -> *mut c_void;
    pub fn ocio_processor_has_dynamic_property(handle: *mut c_void, type_param: i32) -> bool;
    pub fn ocio_processor_is_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_processor_get_optimized_processor_v1(
        handle: *mut c_void,
        oFlags: i32,
    ) -> *mut c_void;
    pub fn ocio_processor_get_optimized_processor_v2(
        handle: *mut c_void,
        inBD: i32,
        outBD: i32,
        oFlags: i32,
    ) -> *mut c_void;
    pub fn ocio_processor_optimized_processor(handle: *mut c_void, oFlags: i32) -> *mut c_void;
    pub fn ocio_processor_get_default_gpu_processor(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_processor_get_optimized_gpu_processor(
        handle: *mut c_void,
        oFlags: i32,
    ) -> *mut c_void;
    pub fn ocio_processor_get_optimized_legacy_gpu_processor(
        handle: *mut c_void,
        oFlags: i32,
        edgelen: u32,
    ) -> *mut c_void;
    pub fn ocio_processor_get_default_cpu_processor(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_processor_get_optimized_cpu_processor(
        handle: *mut c_void,
        oFlags: i32,
    ) -> *mut c_void;

    // --- ProcessorMetadata ---
    pub fn ocio_processor_metadata_create() -> *mut c_void;
    pub fn ocio_processor_metadata_destroy(handle: *mut c_void);
    pub fn ocio_processor_metadata_get_num_files(handle: *mut c_void) -> i32;
    pub fn ocio_processor_metadata_get_file(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_processor_metadata_get_num_looks(handle: *mut c_void) -> i32;
    pub fn ocio_processor_metadata_get_look(handle: *mut c_void, index: i32) -> *mut c_void;
    pub fn ocio_processor_metadata_add_file(handle: *mut c_void, fileName: *const i8) -> ();
    pub fn ocio_processor_metadata_add_look(handle: *mut c_void, look: *const i8) -> ();

    // --- CPUProcessor ---
    pub fn ocio_cpu_processor_destroy(handle: *mut c_void);
    pub fn ocio_cpu_processor_is_no_op(handle: *mut c_void) -> bool;
    pub fn ocio_cpu_processor_is_identity(handle: *mut c_void) -> bool;
    pub fn ocio_cpu_processor_has_channel_crosstalk(handle: *mut c_void) -> bool;
    pub fn ocio_cpu_processor_get_cache_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_cpu_processor_get_input_bit_depth(handle: *mut c_void) -> i32;
    pub fn ocio_cpu_processor_get_output_bit_depth(handle: *mut c_void) -> i32;
    pub fn ocio_cpu_processor_get_dynamic_property(
        handle: *mut c_void,
        type_param: i32,
    ) -> *mut c_void;
    pub fn ocio_cpu_processor_has_dynamic_property(handle: *mut c_void, type_param: i32) -> bool;
    pub fn ocio_cpu_processor_is_dynamic(handle: *mut c_void) -> bool;
    pub fn ocio_cpu_processor_apply(handle: *mut c_void, imgDesc: *mut c_void) -> ();
    pub fn ocio_cpu_processor_apply_v1(handle: *mut c_void, imgDesc: *mut c_void) -> ();
    pub fn ocio_cpu_processor_apply_v2(
        handle: *mut c_void,
        srcImgDesc: *mut c_void,
        dstImgDesc: *mut c_void,
    ) -> ();
    pub fn ocio_cpu_processor_apply_rgb(handle: *mut c_void, pixel: *mut c_void) -> ();
    pub fn ocio_cpu_processor_apply_rgba(handle: *mut c_void, pixel: *mut c_void) -> ();

    // --- GPUProcessor ---
    pub fn ocio_gpu_processor_destroy(handle: *mut c_void);
    pub fn ocio_gpu_processor_is_no_op(handle: *mut c_void) -> bool;
    pub fn ocio_gpu_processor_has_channel_crosstalk(handle: *mut c_void) -> bool;
    pub fn ocio_gpu_processor_get_cache_id(handle: *mut c_void) -> *mut c_void;
    pub fn ocio_gpu_processor_extract_gpu_shader_info(
        handle: *mut c_void,
        shaderDesc: *mut c_void,
    ) -> ();
    pub fn ocio_gpu_processor_extract_gpu_shader_info_v1(
        handle: *mut c_void,
        shaderDesc: *mut c_void,
    ) -> ();
    pub fn ocio_gpu_processor_extract_gpu_shader_info_v2(
        handle: *mut c_void,
        shaderCreator: *mut c_void,
    ) -> ();
